--- a/biology.html
+++ b/biology.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Biology Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #28a745; /* Green for Biology */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>🧬 Biology Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="bio_chapter1.pdf" target="_blank">Chapter 1: Life Processes</a>
+  </div>
+
+  <div class="chapter">
+    <a href="bio_chapter2.pdf" target="_blank">Chapter 2: Control and Coordination</a>
+  </div>
+
+  <div class="chapter">
+    <a href="bio_chapter3.pdf" target="_blank">Chapter 3: How do Organisms Reproduce?</a>
+  </div>
+
+  <div class="chapter">
+    <a href="bio_chapter4.pdf" target="_blank">Chapter 4: Heredity and Evolution</a>
+  </div>
+
+  <div class="chapter">
+    <a href="bio_chapter5.pdf" target="_blank">Chapter 5: Our Environment</a>
+  </div>
+
+</body>
+</html>
